--- a/views/etu/home.hbs
+++ b/views/etu/home.hbs
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="/etu/etuform">ETU Assessment</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/nurse/checkup">Apply Request</a>
+                <a class="nav-link" href="/etu/etufinalreport">Final Report</a>
               </li>
               
             </ul>
