--- a/views/departments/request.hbs
+++ b/views/departments/request.hbs
@@ -166,7 +166,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
-              <form method="POST" action="/upload/formData{{reqId}}" enctype="multipart/form-data">   
+              <form method="POST" action="/upload/formData" enctype="multipart/form-data">   
               <div class="modal-body">
 
                 <div class="input-group mb-3">
@@ -177,6 +177,11 @@
                 <div class="input-group mb-3">
                   <span class="input-group-text" id="basic-addon1">Test Status</span>
                   <input name="test_status" type="text" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1" value="Completed">
+                </div>
+
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="basic-addon1">Feedback</span>
+                  <input name="feedback" type="text" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1">
                 </div>
 
                 <div class="mb-3">
@@ -207,14 +212,24 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
-              <form method="POST" action="/upload/formData/1">   
+              <form method="POST" action="/upload/formData" enctype="multipart/form-data">   
 
               <div class="modal-body">
                 <div class="input-group mb-3">
-                  <span class="input-group-text" id="basic-addon1">Test Status</span>
-                  <input name="test_status" type="text" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1" value="Completed">
+                  <span class="input-group-text" id="basic-addon1">Request Id</span>
+                  <input name="reqId" type="number" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1">
                 </div>
 
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="basic-addon1">Test Status</span>
+                  <input name="test_status" type="text" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1" value="Rejected">
+                </div>
+
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="basic-addon1">Feedback</span>
+                  <input name="feedback" type="text" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1">
+                </div>
+              </div>
                 <div class="modal-footer">
                   <button type="submit" class="btn btn-primary">Confirm</button>
                   <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancle</button>
