Complete upload interface :fire:

--- a/views/departments/request.hbs
+++ b/views/departments/request.hbs
@@ -83,29 +83,29 @@
                 <div class="row mb-3">
                   <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
                   <div class="col-sm-10">
-                    <input name="name" type="text" class="form-control" id="inputEmail3" value={{data.patient.name}}>
+                    <input name="name" type="text" class="form-control" id="inputEmail3" value={{data.patient.name}} disabled>
                   </div>
                 </div>
                 <div class="row mb-3">
                   <label for="inputPassword3" class="col-sm-2 col-form-label">Address</label>
                   <div class="col-sm-10">
-                    <input name="adrs" type="text" class="form-control" id="inputPassword3" value={{data.patient.adrs}}>
+                    <input name="adrs" type="text" class="form-control" id="inputPassword3" value={{data.patient.adrs}} disabled>
                   </div>
                 </div>
                 <div class="row mb-3">
                     <label for="inputPassword3" class="col-sm-2 col-form-label">Gender</label>
                     <div class="col-sm-2">
-                      <input type="text" class="form-control" id="inputPassword3" value={{data.patient.gender}}>
+                      <input type="text" class="form-control" id="inputPassword3" value={{data.patient.gender}} disabled>
                     </div>
 
                     <label for="inputPassword3" class="col-sm-1 col-form-label">Age</label>
                     <div class="col-sm-2">
-                      <input type="text" class="form-control" id="inputPassword3" value={{data.patient.age}}>
+                      <input type="text" class="form-control" id="inputPassword3" value={{data.patient.age}} disabled>
                     </div>
 
                     <label for="inputPassword3" class="col-sm-2 col-form-label">Contact No</label>
                     <div class="col-sm-3">
-                      <input type="text" class="form-control" id="inputPassword3" value={{data.patient.contact_no}}>
+                      <input type="text" class="form-control" id="inputPassword3" value={{data.patient.contact_no}} disabled>
                     </div>
                   </div>
               </form>
@@ -176,7 +176,7 @@
 
                 <div class="input-group mb-3">
                   <span class="input-group-text" id="basic-addon1">Test Status</span>
-                  <input name="test_status" type="text" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1" value="Completed">
+                  <input name="test_status" type="text" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1" value="Completed" disabled>
                 </div>
 
                 <div class="input-group mb-3">
@@ -222,7 +222,7 @@
 
                 <div class="input-group mb-3">
                   <span class="input-group-text" id="basic-addon1">Test Status</span>
-                  <input name="test_status" type="text" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1" value="Rejected">
+                  <input name="test_status" type="text" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1" value="Rejected" disabled>
                 </div>
 
                 <div class="input-group mb-3">
