--- a/views/etu/etuform.hbs
+++ b/views/etu/etuform.hbs
@@ -32,7 +32,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/etu/etufinalreport">Final Report</a>
               </li>
-              
+              <li class="nav-item">
+                <a class="nav-link" href="/etu/ccUnit">CC Unit</a>
+              </li>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
