Add navbar changes

--- a/views/etu/etufinalreport.hbs
+++ b/views/etu/etufinalreport.hbs
@@ -70,17 +70,24 @@
                 <a class="nav-link" href="/etu/etuform">ETU Assessment</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/etu/etufinalreport">Final Report</a>
+                <a class="nav-link active" href="/etu/etufinalreport">Final Report</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/etu/ccUnit">CC Unit</a>
               </li>
               
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <i class="fas fa-user-circle"></i>&nbsp;UserName
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="/user/login"><i class="fas fa-sign-out-alt"></i>&nbsp;Log Out</a></li>
+                      <li><a class="dropdown-item" href="/user/userRegistration"><i class="fas fa-user-plus"></i>&nbsp;Sign Up</a></li>
+                    </ul>
+                </li>
+            </ul>
           </div>
         </div>
     </nav>
