Add limit to evm 1-5

--- a/views/etu/etuform.hbs
+++ b/views/etu/etuform.hbs
@@ -135,15 +135,18 @@
 
                       <div class="col-md-4">
                         <label for="validationDefault03" class="form-label">Eyes</label>
-                        <input name="eye" type="eyes" class="form-control" id="validationDefault03">
+                        <input name="eye" type="number" min="1" max="5" class="form-control" id="validationDefault03">
+                        <div id="emailHelp" class="form-text">*Must be between 1-5.</div>
                       </div>
                       <div class="col-md-4">
                         <label for="validationDefault03" class="form-label">Verbal</label>
-                        <input name="verbal" type="verbal" class="form-control" id="validationDefault03">
+                        <input name="verbal" type="number" min="1" max="5" class="form-control" id="validationDefault03">
+                        <div id="emailHelp" class="form-text">*Must be between 1-5.</div>
                       </div> 
                       <div class="col-md-4">
                         <label for="validationDefault03" class="form-label">Motor</label>
-                        <input name="motor" type="motor" class="form-control" id="validationDefault03">
+                        <input name="motor" type="number" min="1" max="5" class="form-control" id="validationDefault03">
+                        <div id="emailHelp" class="form-text">*Must be between 1-5.</div>
                       </div>
 
                       <div class="col-md-4">
