--- a/views/etu/etufinalreport.hbs
+++ b/views/etu/etufinalreport.hbs
@@ -397,6 +397,10 @@
                             <label for="validationDefault02" class="form-label">Contact Number</label>
                             <input name="contact_no" type="number" class="form-control" id="validationDefault02" required value={{data.patient.contact_no}}>
                         </div>
+                        <div class="col-md-6">
+                            <label for="validationDefault02" class="form-label">Status</label>
+                            <input name="contact_no" type="text" class="form-control" id="validationDefault02" required value={{data.status}}>
+                        </div>
 
                         <div class="col-md-4">
                             <label for="validationDefault04" class="form-label">Title</label>
