--- a/views/Signin.hbs
+++ b/views/Signin.hbs
@@ -16,10 +16,10 @@
     <body>
         
         
-        <div class="wrapper" style="background-image: url('/design_files/images/background.jpg')">
+        <div class="wrapper" style="background-image: url('/design_files/images/backgroundd.jpg')">
         <div class="inner">
         <div class="image-holder">
-            <img src="/design_files/images/login.jpg">
+            <img src="/design_files/images/lo.jpg" height="400">
         </div>
         <form method = "POST" action="/user/login">
             <h3>Login</h3>
