--- a/views/nurse/patientReg.hbs
+++ b/views/nurse/patientReg.hbs
@@ -61,7 +61,12 @@
         <div class="col-md-6 " style="padding-top: 30px;">
             <div class="card">
                 <div class="card-body">
-
+                    <style>
+                   h3 {
+                      text-align: center;
+                   }
+                </style>
+                    <h3>Patient Registration Form</h3>
                     <form method="POST" action="/nurse/register" class="row g-3">   
                         <div class="col-md-6">
                             <label for="validationDefault01" class="form-label">Patient NIC Number</label>
