--- a/views/nurse/viewPatient.hbs
+++ b/views/nurse/viewPatient.hbs
@@ -60,6 +60,12 @@
         <div class="col-md-6 " style="padding-top: 30px;">
             <div class="card">
                 <div class="card-body">
+                  <style>
+                   h3 {
+                      text-align: center;
+                   }
+                </style>
+                    <h3>View Patient</h3>
                     <form method="GET" action="/common/patient" class="row g-3">
                         <div class="col-md-6">
                             <label for="validationDefault02" class="form-label">Patient NIC Number</label>
