--- a/views/departments/chemical_home.hbs
+++ b/views/departments/chemical_home.hbs
@@ -52,6 +52,71 @@
         <hr class="my-4">
         <h4 class="text-light">Welcome to Department of Chemical and Pathalogy | District General Hospital.</h4>
       </div>
+<div class="container-fluid position-relative"><h3 class="text-center font-monospace">Patients Visited Today</h3></div>
+
+
+      <div class="p-3 m-3">
+      <div class="table-responsive table-success">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">NIC</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Age</th>
+                    <th scope="col">Gender</th>
+                    <th scope="col">Contact-No</th>
+                    <th scope="col">Severity</th>
+                </tr>
+            </thead>
+              <tbody>
+                <!-- <tr class="table-active">
+                  ...
+                </tr> -->
+                <tr>
+                    <th scope="row">199798989898</th>
+                    <td>A.B.Kumara</td>
+                    <td>22</td>
+                    <td>M</td>
+                    <td>078-12345464</td>
+                    <td>Normal</td>
+                </tr>
+                <tr>
+                    <th scope="row">199798989898</th>
+                    <td>A.B.Kumara</td>
+                    <td>22</td>
+                    <td>M</td>
+                    <td>078-12345464</td>
+                    <td>Normal</td>
+                </tr>
+                 <tr>
+                    <th scope="row">199798989898</th>
+                    <td>A.B.Kumara</td>
+                    <td>22</td>
+                    <td>M</td>
+                    <td>078-12345464</td>
+                    <td>Normal</td>
+                </tr>
+              </tbody>
+        </table>
+      </div>
+    </div>  
+
+   <div class="p-3 m-3 mx-auto">
+      <div class="d-flex d-grid gap-5 flex-row bd-highlight mb-3 justify-content-center row row-cols-1" style="height: 180px">
+          <div class="p-2 bd-highlight bg-primary" style="width: 196px">
+            <h3 class="text-center">Registered</h3>
+            <h1 class="display-1 text-center">20</h1>
+          </div>
+            <div class="p-2 bd-highlight bg-danger" style="width: 196px">
+            <h3 class="text-center"> Admitted</h3>
+            <h1 class="display-1 text-center">06</h1>
+          </div>
+            <div class="p-2 bd-highlight bg-success" style="width: 196px">
+            <h3 class="text-center">Discharged</h3>
+            <h1 class="display-1 text-center">03</h1>
+          </div>
+    </div>
+  </div>
 
 
     <!-- Optional JavaScript; choose one of the two! -->
