--- a/views/etu/etuform.hbs
+++ b/views/etu/etuform.hbs
@@ -69,7 +69,12 @@
         <div class="col-md-6 " style="padding-top: 30px;">
             <div class="card">
                 <div class="card-body">
-
+                 <style>
+                   h3 {
+                      text-align: center;
+                   }
+                </style>
+                    <h3>ETU Assessment Form</h3>
                     <form method="POST" action="/etu/etuform" class="row g-3">   
                         <div class="col-md-12">
                             <label for="validationDefault01" class="form-label">Patient NIC Number</label>
