--- a/views/nurse/checkup.hbs
+++ b/views/nurse/checkup.hbs
@@ -58,7 +58,12 @@
         <div class="col-md-6 " style="padding-top: 30px;">
             <div class="card">
                 <div class="card-body">
-
+                   <style>
+                   h3 {
+                      text-align: center;
+                   }
+                </style>
+                    <h3>Initial CheckUp Form</h3>
                     <form method="POST" class="row g-3" action="/nurse/checkup">   
                         <div class="col-md-6">
                             <label for="validationDefault01" class="form-label">Patient NIC Number</label>
